# special-enigma

./: .gitignore  CMakeLists.txt  Flow.cpp  Flow.h  IRTranslator.h  IRTranslatorSimple.h  IRTypes.cpp  IRTypes.h  IRUtilities.h  Instruction.h  InstructionOperands.h  InstructionUtilities.cpp  InstructionUtilities.h  Makefile  NoRegisterAllocation.h  PeepholeOptimization.h  README.md  RegisterAllocation.cpp  RegisterAllocation.h  RegisterAllocationAllStack.h  RegisterAllocationRefactor.h  Utilities.cpp  Utilities.h  ast.cpp  backendTest.cpp  compiler.cpp  eliPhi.h  frontendTest.cpp  genIR.cpp  genIR.h  lex.yy.cpp  lrlex.l  lrparser.tab.hpp  lrparser.y  main.cpp  symtab.h
special-enigma-front/: IRTypes.h  Makefile  README.md  a  ast.cpp  ast.h  genIR.cpp  lrparser.tab.cpp  lrparser.y  main.cpp  opt.cpp  opt.h  test.sy  test1.sy
